--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.jlab.coat</groupId>
             <artifactId>coat-libs</artifactId>
-            <version>6.6.0-SNAPSHOT</version>
+            <version>13.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.jlab.coda</groupId>
